# fvtt-system-draw-steel

./: .gitignore  Set-PackConfig.ps1  ogre-goon.yml  package-lock.json  package.json  system.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
icons/: LICENSE
lang/: en.json
libs/ads/: pyproject.toml
libs/ads/ads/api/: ability_and_trait_parser.py  distance_and_target_parser.py  foundry.py  monster_parser.py  ocr_parser.py  power_roll_parser.py  string_format.py
libs/ads/ads/cli/: ads_commands.py  ocr_commands.py  package_commands.py  pdf_commands.py
libs/ads/ads/model/: __init__.py  ability_and_trait.py  characteristics.py  distance_and_target.py  effect.py  immunity_or_weakness.py  minion.py  monster.py  power_roll.py  stamina.py
ocr-output/: full_combined_ocr.txt
packs/abilities/: 000020.ldb  000024.ldb  LOG  LOG.old  MANIFEST-000021
packs/hero-abilities/: LOG  LOG.old
packs/monster-abilities/: 000121.ldb  000125.ldb  LOG  LOG.old  MANIFEST-000124  MANIFEST-000128  MANIFEST-000130
packs/monsters/: 000005.ldb  000009.ldb  000053.ldb  000167.ldb  000171.ldb  000192.ldb  000282.ldb  000286.ldb  000336.ldb  000348.ldb  LOG  LOG.old  MANIFEST-000006  MANIFEST-000032  MANIFEST-000034  MANIFEST-000049  MANIFEST-000175  MANIFEST-000188  MANIFEST-000285  MANIFEST-000294  MANIFEST-000313  MANIFEST-000332  MANIFEST-000344
scripts/: New-DevSynLink.ps1  New-Pack.ps1  NewYamlMonster.py  convertSvgsToWhite.js  package-lock.json  package.json  renameAndMoveSvgs.js
src/: main.ts  styles.scss  workzone.md
src/utils/: keys.ts  (+3 more)
types/: base.d.ts
(+230 files in other folders)
