[project]
name = "ads"
version = "0.1.0"
description = ""
authors = [{ name = "Morden" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["typer (>=0.16.0,<0.17.0)", "pyyaml (>=6.0.2,<7.0.0)"]

[tool.poetry]
packages = [{ include = "ads" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
ads = "ads.cli.ads_commands:ads"
